@@ -8,14 +8,19 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.util.*;
 import java.util.stream.Collectors;
 
-public record CustomUserDetail(UUID id, String email, String password, String firstname, String lastname,
-							   Set<Role> roles ) implements UserDetails {
+public record CustomUserDetail(UUID id,
+							   String email,
+							   String password,
+							   String firstname,
+							   String lastname,
+							   Set<Role> roles,
+							   boolean isActive) implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 		return roles.stream()
 				.map(role -> new SimpleGrantedAuthority(role.name()))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Override
@@ -35,7 +40,7 @@ public record CustomUserDetail(UUID id, String email, String password, String fi
 
 	@Override
 	public boolean isAccountNonLocked() {
-		return true;
+		return this.isActive;
 	}
 
 	@Override
@@ -45,15 +50,8 @@ public record CustomUserDetail(UUID id, String email, String password, String fi
 
 	@Override
 	public boolean isEnabled() {
-		return true;
+		return this.isActive;
 	}
 
-//	@Override
-//	public boolean equals(Object o) {
-//		if (o == null || getClass() != o.getClass()) return false;
-//		CustomUserDetail that = (CustomUserDetail) o;
-//		return Objects.equals(id, that.id) && Objects.equals(email, that.email) && Objects.equals(password, that.password)
-//				&& Objects.equals(firstname, that.firstname) && Objects.equals(lastname, that.lastname) && role == that.role;
-//	}
 
 }
